small refactoring, fix naptan test as stop has moved@